2012-01-09  KUBO Takehiro  <kubo@jiubao.org>
	* docs/install-full-client.md: add a new document file.

2012-01-08  KUBO Takehiro  <kubo@jiubao.org>
	* doc/*: remove obsolete documents.

2011-12-15  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/object.rb, test/setup_test_object.sql, test/test_object.rb:
	    fix "wrong number of arguments (1 for 2)" when date datatype in a object
	    type is gotten.
	    (repored by Leoš Bitto)

2011-12-13  KUBO Takehiro  <kubo@jiubao.org>
	* VERSION: update to 2.1.0.
	* ext/oci8/error.c, ext/oci8/oci8.c, ext/oci8/oci8.h, ext/oci8/ocidatetime.c,
	  ext/oci8/ocinumber.c, ext/oci8/stmt.c: suppress gcc-4.6 warnings.

2011-12-11  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/connection_pool.c: fix a buffer overrun in oci8_cpool_initialize().

2011-12-11  KUBO Takehiro  <kubo@jiubao.org>
	* NEWS: add changes between 2.0.6 and 2.1.0.
	* README, test/README: rewritten.
	* ext/oci8/connection_pool.c: add a note.

2011-12-10  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_bind_string.rb: suppress "No tests were specified" when
	    the client character set is not UTF-8.

2011-12-10  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8/oci8.rb, lib/oci8/properties.rb, test/test_datetime.rb:
	    revert OCI8.properties[:time_zone] which was added 5 days ago.
	* lib/oci8.rb.in: use ENV['ORA_SDTZ'] instead of 'alter session set time_zone = ...'
	    to set Oracle session time zone. On cygwin, explicitly set
	    environments variables which start with 'ORA_' to WIN32 environments.

2011-12-10  KUBO Takehiro  <kubo@jiubao.org>
	* test/test_oci8.rb: fix test_select when TZ set to daylight saving time.
	    (reported by Yasuo Honda)

2011-12-06  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.c: raise a RuntimeError when non-blocking mode is set to a connection
	    allocated from OCI8::ConnectionPool on ruby 1.8.
	    Ruby 1.9.x and rubinius don't have the limitation.
	* test/test_connection_pool.rb: fix for ruby 1.8.