@@ -1,3 +1,9 @@
+2012-01-19  KUBO Takehiro  <kubo@jiubao.org>
+	* ext/oci8/apiwrap.yml, ext/oci8/oci8.c, lib/oci8/oci8.rb: replace
+	    OCILogon() with OCILogon2() and use the latter to use
+	    ConnectionPool.
+	* test/config.rb: fix to pass lob tests.
+
 2012-01-09  KUBO Takehiro  <kubo@jiubao.org>
 	* docs/install-full-client.md: add a new document file.
 
